// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`monorepo > build bar 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`monorepo > build bar 2`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`monorepo > build bar 3`] = `
"index.js:
'use strict';

function bar(a, b) {
  return a - b;
}

exports.bar = bar;
"
`;

exports[`monorepo > build bar 4`] = `
"index.min.js:
"use strict";exports.bar=function(r,t){return r-t};
"
`;

exports[`monorepo > build foo 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`monorepo > build foo 2`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`monorepo > build foo 3`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var testMonorepoBar = require('@jiek/test-monorepo-bar');

function index(a, b) {
  return a + b;
}

exports.default = index;
Object.keys(testMonorepoBar).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
    enumerable: true,
    get: function () { return testMonorepoBar[k]; }
  });
});
"
`;

exports[`monorepo > build foo 4`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0});var e=require("@jiek/test-monorepo-bar");exports.default=function(e,t){return e+t},Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})}));
"
`;

exports[`multiple exports > common 1`] = `
[
  "foo.d.mts",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "foo.min.mjs",
  "foo.mjs",
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`multiple exports > common 2`] = `
"foo.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 3`] = `
"foo.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 4`] = `
"foo.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`multiple exports > common 5`] = `
"foo.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`multiple exports > common 6`] = `
"foo.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`multiple exports > common 7`] = `
"foo.mjs:
function foo() {
  return 'foo'
}

export { foo };
"
`;

exports[`multiple exports > common 8`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 9`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`multiple exports > common 10`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`not dts tsconfig > common 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`not dts tsconfig > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`not dts tsconfig > common 3`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`not dts tsconfig > common 4`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`project references > build bar 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.special.d.ts",
  "index.special.js",
  "index.special.min.js",
]
`;

exports[`project references > build bar 2`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 3`] = `
"index.js:
'use strict';

function bar(a, b) {
  return a - b;
}

exports.bar = bar;
"
`;

exports[`project references > build bar 4`] = `
"index.min.js:
"use strict";exports.bar=function(r,t){return r-t};
"
`;

exports[`project references > build bar 5`] = `
"index.special.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 6`] = `
"index.special.js:
'use strict';

function bar(a, b) {
  return a * b;
}

exports.bar = bar;
"
`;

exports[`project references > build bar 7`] = `
"index.special.min.js:
"use strict";exports.bar=function(r,t){return r*t};
"
`;

exports[`project references > build foo 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`project references > build foo 2`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`project references > build foo 3`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var testMonorepoBar = require('@jiek/test-monorepo-bar');

function index(a, b) {
  return a + b;
}

exports.default = index;
Object.keys(testMonorepoBar).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
    enumerable: true,
    get: function () { return testMonorepoBar[k]; }
  });
});
"
`;

exports[`project references > build foo 4`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0});var e=require("@jiek/test-monorepo-bar");exports.default=function(e,t){return e+t},Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})}));
"
`;

exports[`project references > build fuo 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`project references > build fuo 2`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`project references > build fuo 3`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function bar(a, b) {
  return a * b;
}

function index(a, b) {
  return a + b;
}

exports.bar = bar;
exports.default = index;
"
`;

exports[`project references > build fuo 4`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0}),exports.bar=function(e,t){return e*t},exports.default=function(e,t){return e+t};
"
`;

exports[`project references > build fuu 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`project references > build fuu 2`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`project references > build fuu 3`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function bar(a, b) {
  return a - b;
}

function index(a, b) {
  return a + b;
}

exports.bar = bar;
exports.default = index;
"
`;

exports[`project references > build fuu 4`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0}),exports.bar=function(e,t){return e-t},exports.default=function(e,t){return e+t};
"
`;

exports[`simple > common 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`simple > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple > common 3`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`simple > common 4`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`simple mjs > common 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`simple mjs > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple mjs > common 3`] = `
"index.js:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`simple mjs > common 4`] = `
"index.min.js:
function o(){return"foo"}export{o as foo};
"
`;

exports[`unordered exports inputs > common 1`] = `
[
  "a.d.ts",
  "a.js",
  "a.min.js",
  "b.d.ts",
  "b.js",
  "b.min.js",
]
`;

exports[`unordered exports inputs > common 2`] = `
"a.d.ts:
type A = 'a';

export type { A };
"
`;

exports[`unordered exports inputs > common 3`] = `
"a.js:
'use strict';

"
`;

exports[`unordered exports inputs > common 4`] = `
"a.min.js:
"use strict";
"
`;

exports[`unordered exports inputs > common 5`] = `
"b.d.ts:
type BDepDep = 1;

type BDep = BDepDep;

type B = BDep;

export type { B };
"
`;

exports[`unordered exports inputs > common 6`] = `
"b.js:
'use strict';

"
`;

exports[`unordered exports inputs > common 7`] = `
"b.min.js:
"use strict";
"
`;

exports[`with no resolve exports > common 1`] = `
[
  "index.d.ts",
  "index.js",
  "index.min.js",
]
`;

exports[`with no resolve exports > common 2`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 3`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`with no resolve exports > common 4`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`with scss file import > common 1`] = `
[
  "foo.css",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "index.css",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.styless.d.ts",
  "index.styless.js",
  "index.styless.min.js",
]
`;

exports[`with scss file import > common 2`] = `
"foo.css:
.foo{display:none}.foo--bar{display:block}"
`;

exports[`with scss file import > common 3`] = `
"foo.d.ts:

export {  }
"
`;

exports[`with scss file import > common 4`] = `
"foo.js:
'use strict';

require('with-scss-file-import/foo.css');

"
`;

exports[`with scss file import > common 5`] = `
"foo.min.js:
"use strict";require("with-scss-file-import/foo.css");
"
`;

exports[`with scss file import > common 6`] = `
"index.css:
#app{color:red}"
`;

exports[`with scss file import > common 7`] = `
"index.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 8`] = `
"index.js:
'use strict';

require('with-scss-file-import/index.css');
require('with-scss-file-import/foo');

function bar() {
  return "bar";
}

exports.bar = bar;
"
`;

exports[`with scss file import > common 9`] = `
"index.min.js:
"use strict";require("with-scss-file-import/index.css"),require("with-scss-file-import/foo"),exports.bar=function(){return"bar"};
"
`;

exports[`with scss file import > common 10`] = `
"index.styless.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 11`] = `
"index.styless.js:
'use strict';

require('with-scss-file-import/foo');

function bar() {
  return "bar";
}

exports.bar = bar;
"
`;

exports[`with scss file import > common 12`] = `
"index.styless.min.js:
"use strict";require("with-scss-file-import/foo"),exports.bar=function(){return"bar"};
"
`;
